Add publish workflow

--- a/.github/workflows/build-workflow.yaml
+++ b/.github/workflows/build-workflow.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+env:
+  DOCKER_REPO: ${{ secrets.DOCKER_REPO_NAME }}
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,4 +17,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Docker build
-        run: docker build . -t ${{ github.repository }}:${{ github.sha }}
+        run: docker build . -t $DOCKER_USERNAME/$DOCKER_REPO:${{ github.sha }}
